# seldom-cv

./: README.md  pyproject.toml
seldomcv/: __init__.py  api.py
