[tool.poetry]
name = "seldomcv"
version = "0.1.0"
description = ""
authors = ["defnngj <defnngj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
